--- a/api/.env.example
+++ b/api/.env.example
@@ -9,9 +9,10 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=databasename
+DB_USERNAME=databaseuser
+DB_PASSWORD=123456
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
