--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,4 +1,6 @@
 server {
+  # nginx will now start if host is not reachable
+
   listen 80 default;
   client_max_body_size 308M;
   access_log /var/log/nginx/application.access.log;
@@ -6,9 +8,12 @@ server {
   index index.php;
   if (!-e $request_filename) {
     rewrite ^.*$ /index.php last;
-  }
-  location ~ \.php$ {
-    fastcgi_pass php-fpm:9000;
+   }
+   location ~ \.php$ {
+     resolver 127.0.0.11;
+     set $upstream php:9000;
+
+    fastcgi_pass $upstream;
     fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
